# ACREDIA-STELLAR

./: .gitignore  README.md
.github/workflows/: ci.yml
contracts/: Cargo.toml  Makefile  README.md
contracts/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json  test_simulate.mjs  vitest.config.ts
frontend/sql/: STUDENT_DASHBOARD_FIX.sql  add_profiles_table.sql  database_schema.sql  secure_rls_migration.sql
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/admin/stats/: route.ts
frontend/src/app/api/admin/update-authorization/: route.ts
frontend/src/app/api/student/credentials/: route.ts
frontend/src/app/api/verify/[token]/: route.ts
frontend/src/app/auth/admin-login/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/institution/: AuthorizeIssuer.tsx  CredentialUploadForm.tsx  IssuedCredentialsList.tsx
frontend/src/components/student/: QRCodeModal.tsx  StudentCredentialsList.tsx
frontend/src/components/ui/: ConnectWallet.tsx
frontend/src/contexts/: AuthContext.tsx  StellarContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: contracts.ts  credentialService.ts  ipfs.ts  lifecycle.ts  serverAuth.ts  stellar.ts  supabase.ts  utils.ts
frontend/tests/: lifecycle.test.ts  utils.test.ts
