[package]
name = "acredia-stellar"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "20.3.0"

[dev-dependencies]
soroban-sdk = { version = "20.3.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

# Suppress false-positive cfg warnings from Soroban SDK macros (testutils feature gate)
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("testutils"))'] }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = false
lto = true
codegen-units = 1
strip = true
